<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/register_title"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="118dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/register_title"
            android:textAppearance="@style/register_title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/register_grayline">

        <View
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:background="@drawable/register_progressline" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="58dp">

        <TextView
            android:id="@+id/terms_info"
            android:layout_width="330dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:text="@string/id_info"
            android:textAppearance="@style/id_info" />

        <RelativeLayout
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginTop="116dp"
            android:layout_marginStart="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_field">

            <EditText
                android:id="@+id/text_id"
                android:layout_width="310dp"
                android:layout_height="match_parent"
                android:autofillHints="아이디(학번)"
                android:hint="@string/id_hint"
                android:inputType="number"
                android:textAppearance="@style/loginLabel"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.33sp"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:maxLength="8"
                android:maxLines="1"
                android:background="@android:color/transparent"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/id_text_alert"
            android:layout_width="332dp"
            android:layout_height="17dp"
            android:layout_marginTop="165dp"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/login_error"
            android:lineSpacingExtra="2sp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            />

        <android.widget.Button
            android:id="@+id/id_btn_next"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="196dp"
            android:layout_centerHorizontal="true"
            android:text="@string/id_btn_next"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@drawable/register_btn_color"
            android:enabled="false" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="66dp"
            android:layout_height="37dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/login_logo"
            android:contentDescription="@string/login_Logo"
            />

    </RelativeLayout>

</RelativeLayout>